--- a/client/package.json
+++ b/client/package.json
@@ -12,33 +12,33 @@
   "author": "Nicolas Yodi",
   "license": "MIT",
   "devDependencies": {
-    "@babel/cli": "^7.0.0",
-    "@babel/core": "^7.0.0",
-    "@babel/preset-env": "^7.0.0",
+    "@babel/cli": "^7.19.3",
+    "@babel/core": "^7.19.3",
+    "@babel/preset-env": "^7.19.3",
     "autoprefixer": "^9.1.3",
-    "babel-loader": "^8.0.0",
-    "copy-webpack-plugin": "^4.5.2",
-    "css-loader": "^1.0.0",
-    "extract-text-webpack-plugin": "^3.0.2",
-    "file-loader": "^2.0.0",
-    "html-webpack-plugin": "^3.2.0",
-    "node-sass": "^4.12.0",
+    "babel-loader": "^8.2.3",
+    "copy-webpack-plugin": "^5.1.2",
+    "css-loader": "^5.2.7",
+    "mini-css-extract-plugin": "^1.6.2",
+    "file-loader": "^6.2.0",
+    "html-webpack-plugin": "^4.5.2",
+    "node-sass": "^6.0.1",
     "postcss-loader": "^3.0.0",
-    "postcss-url": "^8.0.0",
+    "postcss-url": "^10.1.3",
     "precss": "^3.1.2",
-    "resolve-url-loader": "^2.3.0",
-    "sass-loader": "^7.1.0",
-    "style-loader": "^0.23.0",
-    "typescript": "^3.6.2",
-    "webpack": "^4.17.1",
-    "webpack-cli": "^3.1.0",
-    "webpack-dev-server": "^3.1.7"
+    "resolve-url-loader": "^3.1.4",
+    "sass-loader": "^10.3.1",
+    "style-loader": "^2.0.0",
+    "typescript": "^4.8.4",
+    "webpack": "^4.46.0",
+    "webpack-cli": "^4.9.1",
+    "webpack-dev-server": "^4.4.0"
   },
   "dependencies": {
-    "@types/jqueryui": "^1.12.7",
-    "bootstrap": "^4.1.3",
+    "@types/jqueryui": "^1.12.16",
+    "bootstrap": "^4.6.1",
     "fsevents": "^2.0.7",
-    "jquery": "^3.3.1",
+    "jquery": "^3.6.1",
     "open-iconic": "^1.1.1",
     "popper.js": "^1.14.4",
     "rebuild": "^0.1.2",
